# performance-manager

./: CMakeLists.txt  README.md
src/: Application.cpp  Application.h  MainWindow.cpp  MainWindow.h  SysController.cpp  SysController.h  helper.cpp  main.cpp  perf-helper
ui/: main_window.ui
